@startuml

!define TABLE(x) class x << (T,#9932CC) >>
!define PRIMARY_KEY(x) <u>x</u>
!define FOREIGN_KEY(x) <b>x</b>
!define ONE "<color:#00ff99>1</color>"
!define MANY "<color:#00ff99>*</color>"
!define CREATES "<color:#6B00A2>creates</color>"
!define USES "<color:#6B00A2>used by</color>"
!define FILES "<color:#6B00A2>files</color>"
!define FILES_AS_SPOUSE "<color:#6B00A2>files as spouse</color>"
!define CURRENT_THEME "<color:#6B00A2>current theme</color>"

skinparam backgroundColor black

skinparam class {
    BackgroundColor black
    BorderColor #00ff99
    ArrowColor #00ff99
    FontColor #00ff99
    FontName DejaVu Sans Mono
}

skinparam classAttribute {
    FontColor #e600e6
    FontName DejaVu Sans Mono
}

TABLE(king) {
    nick: STRING
    email: STRING
    FOREIGN_KEY(theme_id): INT
    password_hash: STRING
}

TABLE(theme) {
    name: STRING
    foreground_color: STRING
    background_color: STRING
    FOREIGN_KEY(king_id): INT
}

TABLE(human) {
    first_name: STRING
    middle_initial: STRING
    last_name: STRING
    FOREIGN_KEY(king_id): INT
}

TABLE(address) {
    street: STRING
    city: STRING
    state: STRING
    zip: STRING
    FOREIGN_KEY(king_id): INT
}

TABLE(form_1040) {
    name: STRING
    tax_year: INT
    FOREIGN_KEY(filer_id): INT
    FOREIGN_KEY(spouse_id): INT
    FOREIGN_KEY(address_id): INT
    wages: DECIMAL
    withholdings: DECIMAL
    filing_status: STRING
    FOREIGN_KEY(king_id): INT
}

king ONE -- MANY theme : CREATES
theme ONE -- MANY king : CURRENT_THEME
king ONE -- MANY human : CREATES
king ONE -- MANY address : CREATES
human ONE -- MANY form_1040 : FILES
human ONE -- MANY form_1040 : FILES_AS_SPOUSE
address ONE -- MANY form_1040 : USES
king ONE -- MANY form_1040 : CREATES

@enduml
